--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "prisma generate"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
